...
                VStack {
                    Button(action: {
                        coordinator.presentSheet(.registration)
                        coordinator.user.isAdmin = false
                    }, label: {
                        Text("Участник")
                            .accessibilityIdentifier("participant")
                            .font(.system(size: 22))
                            .frame(width: 400, height: 50)
                            .foregroundColor(.black)
                            .background(Color.white)
                            .cornerRadius(22)
                            .padding(.bottom, 5)
...
                    
                    Button(action: {
                        coordinator.presentSheet(.registration)
                        coordinator.user.isAdmin = true
                    }, label: {
                        Text("Организатор")
                            .accessibilityIdentifier("admin")
                            .font(.system(size: 22))
                            .frame(width: 400, height: 50)
                            .foregroundColor(.black)
                            .background(Color.white)
                            .cornerRadius(22)
                            .padding(.bottom, 5)
...
